--- a/views/index.html
+++ b/views/index.html
@@ -12,17 +12,17 @@
     <div class="tile is-ancestor">
         <div class="tile is-parent is-vertical">
             <article class="tile is-child notification is-primary">
-              <p class="title">Vertical...</p>
-              <p class="subtitle">Top tile</p>
+              <p class="title">My Profile</p>
+              <p class="subtitle">View my profile</p>
             </article>
             <article class="tile is-child notification is-warning">
-              <p class="title">...tiles</p>
-              <p class="subtitle">Bottom tile</p>
+              <p class="title">Edit Profile</p>
+              <p class="subtitle">Edit my profile here</p>
             </article>
             <article class="tile is-child notification is-success">
                 <div class="content">
-                  <p class="title">Tall tile</p>
-                  <p class="subtitle">With even more content</p>
+                  <p class="title">Bus Checking</p>
+                  <p class="subtitle">Check the latest bus status</p>
                   <div class="content">
                     <!-- Content -->
                   </div>
