--- a/views/index.html
+++ b/views/index.html
@@ -11,15 +11,15 @@
   <section class="section">
     <div class="tile is-ancestor">
         <div class="tile is-parent is-vertical">
-            <article class="tile is-child notification is-primary">
+            <a class="button tile is-child notification is-primary">
               <p class="title">My Profile</p>
               <p class="subtitle">View my profile</p>
-            </article>
-            <article class="tile is-child notification is-warning">
+            </a>
+            <a class="button tile is-child notification is-warning">
               <p class="title">Edit Profile</p>
               <p class="subtitle">Edit my profile here</p>
-            </article>
-            <article class="tile is-child notification is-success">
+            </a>
+            <a class="button tile is-child notification is-success" href="bus.html">
                 <div class="content">
                   <p class="title">Bus Checking</p>
                   <p class="subtitle">Check the latest bus status</p>
@@ -27,7 +27,7 @@
                     <!-- Content -->
                   </div>
                 </div>
-            </article>
+            </a>
         </div>
       </div>
   </section>
