--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
               <p class="title">Edit Profile</p>
               <p class="subtitle">Edit my profile here</p>
             </a>
-            <a class="button tile is-child notification is-success" href="./bus.html">
+            <a class="button tile is-child notification is-success" href="bus">
                 <div class="content">
                   <p class="title">Bus Checking</p>
                   <p class="subtitle">Check the latest bus status</p>
