--- a/views/bus.html
+++ b/views/bus.html
@@ -54,6 +54,7 @@
                     $$("#home").html(str)
                 },
                 error : function(xhr, status, error){
+                    alert(status)
                     $$("#home").html("数据异常，请稍后再试")
                 }
             })
@@ -73,6 +74,7 @@
                     $$("#work").html(str)
                 },
                 error : function(xhr, status, error){
+                    alert(status)
                     $$("#work").html("数据异常，请稍后再试")
                 }
             })
