--- a/views/bus.html
+++ b/views/bus.html
@@ -54,7 +54,8 @@
                     $$("#home").html(str)
                 },
                 error : function(xhr, status, error){
-                    alert(status)
+                    alert(status);
+                    alert(error);
                     $$("#home").html("数据异常，请稍后再试")
                 }
             })
