--- a/views/bus.html
+++ b/views/bus.html
@@ -54,8 +54,7 @@
                     $$("#home").html(str)
                 },
                 error : function(xhr, status, error){
-                    alert(status);
-                    alert(error);
+                    alert(xhr.responseText);
                     $$("#home").html("数据异常，请稍后再试")
                 }
             })
@@ -75,7 +74,7 @@
                     $$("#work").html(str)
                 },
                 error : function(xhr, status, error){
-                    alert(status)
+                    alert(xhr.responseText)
                     $$("#work").html("数据异常，请稍后再试")
                 }
             })
