--- a/views/bus.html
+++ b/views/bus.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.ajax-cross-origin.min.js"></script>
   </head>
   <body>
   <section class="section">
@@ -42,6 +43,7 @@
   <script type="text/javascript">
     var get_info_home = function(home_url){
             $$.ajax({
+                crossOrigin: true,
                 url : home_url,
                 success : function(result){
                     var xml = $$(result),
@@ -62,6 +64,7 @@
 
         var get_info_work = function(work_url){
             $$.ajax({
+                crossOrigin: true,
                 url : work_url,
                 success : function(result){
                     var xml = $$(result),
